--- a/assets/css/vno.css
+++ b/assets/css/vno.css
@@ -148,7 +148,7 @@ ul {
 code {
   padding: .1em .4em;
   background: rgba(255, 120, 36, 0.1);
-  border: 1px solid #c9e1f6;
+  border: 1px solid orange;
   border-radius: 3px;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
   font-size: .9em;
