--- a/default.hbs
+++ b/default.hbs
@@ -60,7 +60,8 @@
     <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
 
     {{! Highlight.js }}
-    <script type="text/javascript" src="{{asset "js/highlight.pack.js"}}"></script>
+    <script type="text/javascript" src="http://cdn.bootcss.com/highlight.js/8.8.0/highlight.min.js"></script>
+    <!--<script type="text/javascript" src="{{asset "js/highlight.pack.js"}}"></script>-->
     <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
