--- a/partials/side-panel.hbs
+++ b/partials/side-panel.hbs
@@ -8,7 +8,7 @@
         <a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页"><img src="{{@blog.logo}}" width="80" alt="{{@blog.title}} logo" class="panel-cover__logo logo" /></a>
         {{/if}}
         <h1 class="panel-cover__title panel-title"><a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页">{{@blog.title}}</a></h1>
-        <span class="panel-cover__subtitle panel-subtitle">嘿，我是李竞熠，大四，一名iOS，目前正在一家创业公司实习。当然，除了搞技术，我也喜欢咖啡、猫咪、Beatbox。</span>
+        <span class="panel-cover__subtitle panel-subtitle">嘿，我是李竞熠，大四，一名iOS开发者，目前正在一家创业公司实习。当然，除了搞技术，我也喜欢咖啡、猫咪、Beatbox。</span>
         <hr class="panel-cover__divider" />
         <p class="panel-cover__description">{{@blog.description}}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary" />
