--- a/partials/side-panel.hbs
+++ b/partials/side-panel.hbs
@@ -19,8 +19,8 @@
             <ul class="navigation">
               <li class="navigation__item"><a href="/#blog" title="访问博客" class="blog-button">博客</a></li>
               <li class="navigation__item"><a href="http://hongyan.cqupt.edu.cn/aboutus" target="_blank" title="红岩网校">网校</a></li>
-              <li class="navigation__item"><a href="http://about.ios.dog/" title="了解更多关于我">关于</a></li>
-              <li class="navigation__item"><a href="http://eepurl.com/" title="邮件订阅本站">订阅</a></li>
+              <li class="navigation__item"><a href="/about" title="了解更多关于我">关于</a></li>
+              <li class="navigation__item"><a href="/links" title="友链">友链</a></li>
             </ul>
           </nav>
           </div>
