改了下介绍

--- a/partials/side-panel.hbs
+++ b/partials/side-panel.hbs
@@ -8,7 +8,7 @@
         <a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页"><img src="{{@blog.logo}}" width="80" alt="{{@blog.title}} logo" class="panel-cover__logo logo" /></a>
         {{/if}}
         <h1 class="panel-cover__title panel-title"><a href="{{@blog.url}}" title="前往 {{@blog.title}} 的主页">{{@blog.title}}</a></h1>
-        <span class="panel-cover__subtitle panel-subtitle">你好，我是 Boolean93。目前大四，是一个iOS、PHP开发者，也是一个 Beatboxer。</span>
+        <span class="panel-cover__subtitle panel-subtitle">你好，我是 Boolean93。目前大四，iOS、PHP开发者，也是 Beatboxer。</span>
         <hr class="panel-cover__divider" />
         <p class="panel-cover__description">{{@blog.description}}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary" />
